ignore tf files

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,9 @@ Thumbs.db
 *.pyc
 __pycache__/
 
-terraform/
-*.tfstate
-*.tfstate.*
-*.tfvars
-*.tfvars.json
-.terraform/
-.terraform.lock.hcl
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.*
+terraform/.terraform.lock.hcl
+terraform/terraform.tfvars
+terraform/backend.tf
