--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,7 +67,7 @@ jobs:
             aws ecs run-task --cluster 531-testing-env-ecs-cluster \
               --task-definition 531-testing-env-task:2 \
               --launch-type FARGATE \
-              --network-configuration "awsvpcConfiguration={subnets=[subnet-0733ed528741fbb1f,subnet-0d9eb2464b875dbce],securityGroups=[sg-0d86054e7df3c6a16],assignPublicIp=ENABLED}" \
+              --network-configuration "awsvpcConfiguration={subnets=[subnet-0b0d9eed47fa4544a,subnet-0d9eb2464b875dbce],securityGroups=[sg-0d86054e7df3c6a16],assignPublicIp=ENABLED}" \
               --overrides '{"containerOverrides":[{"name":"app","command":["pytest","tests/integration/"]}]}'
             
-            
+            # SUBNETS ARE EPHEMERAL DUMMY.
